--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="css/fonts.css">
     <title>Furniture eCommerce</title>
 </head>
@@ -26,31 +26,30 @@
     <img src="css/images/hero-image.png" alt="room interior" class="hero-image">
 </section>
 <section class="products">
-    <h2 class="products-header">Our Products</h2>
+    <h1 class="products-header">Our Products</h1>
     <div class="product-list">
         <div class="all-products">
             <div class="gallery">
                 <img src="css/images/cafe-chair.png" alt="chair" class="gallery-item">
-                <h4 class="gallery-header">Syltherine</h4>
+                <h3 class="gallery-header">Syltherine</h3>
                 <p class="gallery-paraghrap">Stylish cafe chair</p>
             </div>
             <div class="gallery">
                 <img src="css/images/white-chair.png" alt="white chair" class="gallery-item">
-                <h4 class='gallery-header'>Leviosa</h4>
+                <h3 class='gallery-header'>Leviosa</h3>
                 <p class="gallery-paraghrap">Stylish cafe chair</p>
             </div>
             <div class="gallery">
                 <img src="css/images/sofa.png" alt="sofa" class="gallery-item">
-                <h4 class='gallery-header'>Lolito</h4>
+                <h3 class='gallery-header'>Lolito</h3>
                 <p class="gallery-paraghrap">Luxury big sofa</p>
             </div>
             <div class="gallery">
                 <img src="css/images/table.png" alt="table" class="gallery-item">
-                <h4 class='gallery-header'>Respira</h4>
+                <h3 class='gallery-header'>Respira</h3>
                 <p class="gallery-paraghrap">Outdoor bar table and stool</p>
             </div>
         </div>
-    </div>
     </div>
 </section>
 <section class="range">
@@ -73,8 +72,8 @@
 </section>
 <section class="description">
     <div class="desc-text">
-        <p class="header-one">Description</p>
-        <p class="header-two">Additional Information</p>
+        <h2 class="header-one">Description</h2>
+        <h2 class="header-two">Additional Information</h2>
     </div>
     <div class="desc-paragraph">
     <p class="first">Embodying the raw, wayward spirit of rock ‘n’ roll, the Kilburn portable active stereo
