--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,11 @@
             <div class="information">
                 <div class="address-box">
             <h4 class="address-info">Address:</h4>
-            <a href=
-            'https://www.google.com/maps/search/236+5th+SE+Avenue,+New+York+NY10000,+United+States/@40.7444147,-73.9904944,17z/data=!3m1!4b1?entry=ttu'
-            target="_blank" class="address"> 236 5th SE Avenue, New York NY10000, United States</a>
+            <a href= 'https://www.google.com/maps/search/236+5th+SE+Avenue,+New+York+NY10000,+United+States/@40.7444147,-73.9904944,17z/data=!3m1!4b1?entry=ttu' target="_blank" class="address"> 236 5th SE Avenue, New York NY10000, United States</a>
             </div>
             <div class="phone-box">
             <h4 class="phone-info">Phone:</h4>
-            <a href="tel:+(84) 546-6789" target="_blank" class="mobile">Mobile: +(84) 546-6789</a>
+            <a href="tel:+(84)546-6789" target="_blank" class="mobile">Mobile: +(84) 546-6789</a>
            </div>
          </div>
             <div class="map">
@@ -101,5 +99,6 @@
         </div>
     </div>
        </footer>
+       </div>
 </body>
 </html>
