Fix nav-bar error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="css/images/logo.svg" alt="company_logo" class="logo">
         <nav class="nav_bar">
             <ul class="nav_bar_list">
-                <li class="nav_li "> <a class='nav_a active' href="index.html"> Home</a></li>
+                <li class="nav_li "> <a class='nav_a' href="index.html"> Home</a></li>
                 <li class="nav_li"> <a class ='nav_a' href="#">Shop</a></li>
                 <li class="nav_li "> <a class='nav_a active' href="#">About</a></li>
                 <li class='nav_li'> <a  class="nav_a" href="contact.html">Contact</a></li>
